--- a/docs/console/company-configuration/events.mdx
+++ b/docs/console/company-configuration/events.mdx
@@ -49,6 +49,8 @@ This event will be triggered when a Project is created successfully.
     "tenantId": "my-company-id",
     "projectId": "0000000000000001",
     "sourceTemplateId": "0000000000000002",
+
+    // See the Project resource tab
     "project": {...}
   }
 }
