--- a/docs/release-notes/v13.2.1.md
+++ b/docs/release-notes/v13.2.1.md
@@ -19,6 +19,8 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 ### Improvements
 
+#### Versions details when creating a versioned Marketplace item
+
 ### Bug Fix
 
 This version addressed the following bugs:
