--- a/docs/release-notes/v13.2.1.md
+++ b/docs/release-notes/v13.2.1.md
@@ -19,6 +19,13 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 ### Improvements
 
+#### Integration of webhook payload on “Project Created”
+
+Data regarding the template used to create the Project and other informations about it has been added to the “Project Created” event payload. 
+
+More information of the added information can be found on the respective documentation.
+
+
 #### Versions details when creating a versioned Marketplace item
 
 ### Bug Fix
