--- a/docs/release-notes/v13.2.1.md
+++ b/docs/release-notes/v13.2.1.md
@@ -23,8 +23,7 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 Data regarding the template used to create the Project and other informations about it has been added to the “Project Created” event payload. 
 
-More information of the added information can be found on the respective documentation.
-
+More information of the added information can be found on the [respective documentation](/console/company-configuration/events.mdx).
 
 #### Versions details when creating a versioned Marketplace item
 
