--- a/docs/release-notes/v13.2.1.md
+++ b/docs/release-notes/v13.2.1.md
@@ -22,16 +22,18 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 #### Integration of webhook payload on “Project Created”
 
 Data regarding the template used to create the Project and other informations about it has been added to the “Project Created” event payload. 
-
 More information of the added information can be found on the [respective documentation](/docs/console/company-configuration/events.mdx).
 
 #### Versions details when creating a versioned Marketplace item
+
+We have improved the experience of creating a versioned resource from the Marketplace by adding the possibility to see the detail of each version before instantiating the resource.
+You only have to open the versions selector and click on the "Version details" button: a modal window will open with the details of the selected version.
 
 ### Bug Fix
 
 This version addressed the following bugs:
 
-* 
+* we fixed a bug that caused the environments selector to disappear once you clicked on an extension at the Runtime level.
 
 ## Fast Data
 
