--- a/docs/release-notes/v13.2.1.md
+++ b/docs/release-notes/v13.2.1.md
@@ -33,7 +33,9 @@ You only have to open the versions selector and click on the "Version details" b
 
 This version addressed the following bugs:
 
+* we fixed a bug that caused the Project Homepage to not show running pods even though they were present;
 * we fixed a bug that caused the environments selector to disappear once you clicked on an extension at the Runtime level;
+* we fixed a bug that was causing the `Tag Created` event to not include `project` data in the payload;
 * we fixed a wrong behavior that prevented the user to correctly save the configuration after performing a merge of configurations.
 
 ## Fast Data
