composability release note

--- a/docs/release-notes/v13.2.1.md
+++ b/docs/release-notes/v13.2.1.md
@@ -53,11 +53,13 @@ This version addressed the following bugs:
 
 ### Back-Kit Library
 
+The new version `v1.5.8` of the back-kit library is available!
+
+Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for finer-grained details of new versions.
 
 #### Bug Fix
 
-* 
-*
+- Fixed csv export bug when selecting in the column name the field ID's option
 
 ## Marketplace
 
