--- a/docs/release-notes/v13.2.1.md
+++ b/docs/release-notes/v13.2.1.md
@@ -44,7 +44,16 @@ This version addressed the following bugs:
 
 ### Fast Data Services
 
-#### 
+#### Control Plane Frontend
+
+The new version `0.4.1` of the Control Plane frontend service in Fast Data Control Plane application is available!
+
+##### Improvements
+
+Added the logout button in the navigation header so that it is possible to logout even in case of errors or unauthorized access.
+
+
+
 
 ##### Improvements
 
@@ -65,7 +74,13 @@ Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for
 
 ### Marketplace Updates
 
-#### 
+#### CRUD Service
+The new version `7.2.1` of the CRUD Service is available!
+
+##### Bug Fixes
+* improve how query parser discriminates update operator modifiers (e.g. `$each`) from actual record value
+* introduce support for `$eq` operator also for integer fields (the ones defined in nested array and objects)
+
 
 ## How to update your Console
 
