Apply suggestions from code review

--- a/docs/release-notes/v13.2.1.md
+++ b/docs/release-notes/v13.2.1.md
@@ -40,8 +40,6 @@ This version addressed the following bugs:
 
 ## Fast Data
 
-### 
-
 ### Fast Data Services
 
 #### Control Plane Frontend
@@ -50,13 +48,7 @@ The new version `0.4.1` of the Control Plane frontend service in Fast Data Contr
 
 ##### Improvements
 
-Added the logout button in the navigation header so that it is possible to logout even in case of errors or unauthorized access.
-
-
-
-
-##### Improvements
-
+* Added the logout button in the navigation header so that it is possible to logout even in case of errors or unauthorized access.
 
 ## Microfrontend Composer
 
@@ -75,12 +67,13 @@ Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for
 ### Marketplace Updates
 
 #### CRUD Service
+
 The new version `7.2.1` of the CRUD Service is available!
+
 
 ##### Bug Fixes
 * improve how query parser discriminates update operator modifiers (e.g. `$each`) from actual record value
 * introduce support for `$eq` operator also for integer fields (the ones defined in nested array and objects)
-
 
 ## How to update your Console
 
