Apply suggestions from code review

--- a/docs/release-notes/v13.2.1.md
+++ b/docs/release-notes/v13.2.1.md
@@ -21,7 +21,8 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 #### Integration of webhook payload on “Project Created”
 
-Data regarding the template used to create the Project and other informations about it has been added to the “Project Created” event payload. 
+Data regarding the template used to create the Project and other information about it has been added to the “Project Created” event payload. 
+
 More information can be found on the [respective documentation](/docs/console/company-configuration/events.mdx).
 
 #### Versions details when creating a versioned Marketplace item
@@ -69,7 +70,6 @@ Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for
 #### CRUD Service
 
 The new version `7.2.1` of the CRUD Service is available!
-
 
 ##### Bug Fixes
 * improve how query parser discriminates update operator modifiers (e.g. `$each`) from actual record value
