--- a/docs/release-notes/v13.2.1.md
+++ b/docs/release-notes/v13.2.1.md
@@ -25,7 +25,6 @@ Data regarding the template used to create the Project and other information abo
 
 More information can be found on the [respective documentation](/console/company-configuration/events.mdx).
 
-
 #### Versions details when creating a versioned Marketplace item
 
 We have improved the experience of creating a versioned resource from the Marketplace by adding the possibility to see the detail of each version before instantiating the resource.
@@ -73,9 +72,10 @@ Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for
 The new version `7.2.1` of the CRUD Service is available!
 
 ##### Bug Fixes
+
 * improve how query parser discriminates update operator modifiers (e.g. `$each`) from actual record value
 * introduce support for `$eq` operator also for integer fields (the ones defined in nested array and objects)
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `x.x.x`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v13.7.4-beta.0`.
