--- a/docs/release-notes/v13.2.0.md
+++ b/docs/release-notes/v13.2.0.md
@@ -83,6 +83,24 @@ The new version `v1.3.1` of the Projection Storer service is available!
 
 - Better reactivity on grpc channel interruptions for Control Plane capabilities
 
+## Data Catalog
+
+### Data Catalog Agent
+
+The new version `0.6.4` of the Data Catalog Agent template is available!
+
+#### Deprecated
+
+[`Mia Console` target](/runtime_suite_templates/data-catalog-agent/20_configuration.md#mia-console) has been deprecated in favour of [`mia-open-lineage` target](/runtime_suite_templates/data-catalog-agent/20_configuration.md#mia-openlineage) to support [Data Catalog](/data_catalog/overview.mdx) solution.
+
+#### Added
+
+New Data Catalog Agent [targets](/runtime_suite_templates/data-catalog-agent/20_configuration.md#targets) has been added:
+
+* [`mia-open-lineage` target](/runtime_suite_templates/data-catalog-agent/20_configuration.md#mia-openlineage) to feed data from external sources to the [Data Catalog](/data_catalog/overview.mdx) application.
+
+To discover more about how to configure this target, visit the [related documentation](/runtime_suite_templates/data-catalog-agent/20_configuration.md#mia-openlineage).
+
 ## Microfrontend Composer
 
 ### Back-Kit Library
