--- a/docs/release-notes/v13.2.0.md
+++ b/docs/release-notes/v13.2.0.md
@@ -5,15 +5,8 @@ sidebar_label: v13.2.0
 image: "img/release-note-link-preview.png"
 ---
 
-_September 30th, 2024_
+_October 10th, 2024_
 
-:::info
-Mia-Platform Console v13.2.0 is **now in Preview** and will be generally available on October 10th.
-
-Console SaaS users can try out v13.2.0 latest improvements in Preview! Open a Service Request to ask for the creation of a sandbox Company in case you do not have access to any Company.
-
-For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
-:::
 
 ## Data Catalog Application
 
@@ -89,6 +82,24 @@ The new version `v1.3.1` of the Projection Storer service is available!
 ##### Improvements
 
 - Better reactivity on grpc channel interruptions for Control Plane capabilities
+
+## Data Catalog
+
+### Data Catalog Agent
+
+The new version `0.6.4` of the Data Catalog Agent template is available!
+
+#### Deprecated
+
+[`Mia Console` target](/runtime_suite_templates/data-catalog-agent/20_configuration.md#mia-console) has been deprecated in favour of [`mia-open-lineage` target](/runtime_suite_templates/data-catalog-agent/20_configuration.md#mia-openlineage) to support [Data Catalog](/data_catalog/overview.mdx) solution.
+
+#### Added
+
+New Data Catalog Agent [targets](/runtime_suite_templates/data-catalog-agent/20_configuration.md#targets) has been added:
+
+* [`mia-open-lineage` target](/runtime_suite_templates/data-catalog-agent/20_configuration.md#mia-openlineage) to feed data from external sources to the [Data Catalog](/data_catalog/overview.mdx) application.
+
+To discover more about how to configure this target, visit the [related documentation](/runtime_suite_templates/data-catalog-agent/20_configuration.md#mia-openlineage).
 
 ## Microfrontend Composer
 
@@ -194,4 +205,4 @@ The new version `7.2.0` of the CRUD Service is available!
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v13.7.3-beta.4`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v13.7.3`.
