--- a/docs/release-notes/v13.2.1.md
+++ b/docs/release-notes/v13.2.1.md
@@ -5,15 +5,7 @@ sidebar_label: v13.2.1
 image: "img/release-note-link-preview.png"
 ---
 
-_October 10th, 2024_
-
-:::info
-Mia-Platform Console v13.2.1 is **now in Preview** and will be generally available on October 24th.
-
-Console SaaS users can try out v13.2.1 latest improvements in Preview! Open a Service Request to ask for the creation of a sandbox Company in case you do not have access to any Company.
-
-For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
-:::
+_October 24th, 2024_
 
 ## Console
 
@@ -78,4 +70,4 @@ The new version `7.2.1` of the CRUD Service is available!
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v13.7.4-beta.0`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v13.7.4`.
