--- a/docs/data_catalog/data_catalog_open_lineage.mdx
+++ b/docs/data_catalog/data_catalog_open_lineage.mdx
@@ -216,10 +216,10 @@ Here are described which routes Open Lineage service serves:
 | `/metadata-registry/search`                                | REST | GET    | Search for a specific metadata registry of interest                   |
 
 
-### Migration Guides
+## Migration Guides
 
 Here are the migration steps to perform between each version of the service.
 
-#### From 0.1.0 to 0.1.1
+### From 0.1.0 to 0.1.1
 
-Configure and execute the [Fabric Sync cronjob](/data_catalog/data_catalog_agent_setup.mdx#sync-assets).
+Configure and execute the [Fabric Sync cronjob](/data_catalog/data_catalog_agent_setup.mdx#sync-assets) before releasing the service.
