--- a/docs/release-notes/mia-platform-v13.mdx
+++ b/docs/release-notes/mia-platform-v13.mdx
@@ -47,11 +47,19 @@ This function is now only accessible via Application Programming Interface (API)
 
 To learn more, please refer to the [documentation](/console/console-extensibility/overview.md).
 
+## Infrastructure Management
+
 ### Managing Custom Resources through the Console
 
 You can now manage and configure custom objects that are not part of the standard Console supported resources using the classic user interface of the Console. This feature further expands the Console domain over user's entire workloads, enabling greater operability, governance, and control over systems.
 
 ![Custom Resources](img/custom-resources.png)
+
+#### Support of the Custom Resources in the Runtime area
+
+With the v13.3.0 it is now possible to monitor directly in the Runtime area all the Custom Resources deployed for your project, on each environment on it.
+
+For each resource you will be able to access its detail where you will see the respective Describe and Events that are generated, similarly to the other resources in the Runtime Area.
 
 To discover more, please refer to the [documentation](/console/design-your-projects/custom-resources/custom-resources.md).
 
