--- a/docs/release-notes/mia-platform-v13.mdx
+++ b/docs/release-notes/mia-platform-v13.mdx
@@ -55,7 +55,7 @@ You can now manage and configure custom objects that are not part of the standar
 
 ![Custom Resources](img/custom-resources.png)
 
-#### Support of the Custom Resources in the Runtime area
+### Support of the Custom Resources in the Runtime area
 
 With the v13.3.0 it is now possible to monitor directly in the Runtime area all the Custom Resources deployed for your project, on each environment on it.
 
