little mention about lineage capabilities

--- a/docs/release-notes/mia-platform-v13.mdx
+++ b/docs/release-notes/mia-platform-v13.mdx
@@ -94,7 +94,7 @@ Mia-Platform product suite is finally enriched with a new core component, the **
 
 Mia-Platform Data Catalog serves as a centralized repository of metadata that provides a clear and detailed overview of the Company data assets, reducing time for Data Discovery and empowering Data Governance Teams with powerful metadata management features.
 
-Thanks to Data Catalog, you can reduce Data Discovery time with advanced search capabilities, maintain adherence to numerous data management regulations and laws, such as GDPR in Europe, provide a centralized space for your teams to share data information and knowledge, and improve data quality with powerful metadata enrichment features!
+Thanks to Data Catalog, you can reduce Data Discovery time with advanced search capabilities, maintain adherence to numerous data management regulations and laws, such as GDPR in Europe, provide a centralized space for your teams to share data information and knowledge, and improve data quality with powerful metadata enrichment features. In addition, thanks to Data Lineage capabilities, it is possible to understand how data move and transform within your data landscape.
 
 To find out how it works and all the benefits of Mia-Platform Data Catalog, please refer to the related [documentation](/data_catalog/overview.mdx).
 
