--- a/docs/release-notes/mia-platform-v13.mdx
+++ b/docs/release-notes/mia-platform-v13.mdx
@@ -34,6 +34,12 @@ The main benefits for the user can be summarized by the following:
 
 Let's go in deep with the new Features:
 
+### Manage extensions from Console UI (fall release)
+
+We are keeping our ecosystem growing by continuously adding new capabilities to the Platforge Extensibility Kit. Extend your Console by embedding iFrames, adding External Links & composing your pages with Microfrontend Composer using a dedicated "Extensions" manager, accessible to Company Owners within the Platforge section at the Company level.
+
+Start customizing your Console by adding your first iFrame extension: simply select the desired Area and Sidebar section from the options, then input the URL you want to display to your users!
+
 ### Extend Frontend of Mia-Platform Console with iFrames
 
 Extend the Console as you like.
@@ -49,14 +55,17 @@ To learn more, please refer to the [documentation](/console/console-extensibilit
 
 ## Infrastructure Management
 
-### Managing Custom Resources through the Console
+### Support to all infrastructure Resources in Console (fall release)
+
+TO DO
+
+### Manage custom Resources through Console
 
 You can now manage and configure custom objects that are not part of the standard Console supported resources using the classic user interface of the Console. This feature further expands the Console domain over user's entire workloads, enabling greater operability, governance, and control over systems.
 
 ![Custom Resources](img/custom-resources.png)
 
-
-### Support of the Custom Resources in the Runtime area
+### Support of Custom Resources in the Runtime area
 
 With the v13.3.0 it is now possible to monitor directly in the Runtime area all the Custom Resources deployed for your project, on each environment on it.
 
@@ -125,6 +134,10 @@ Many are the benefits of adopting the Fast Data control plane in your Fast Data 
 - **Enhanced System Reliability**, allowing you to gracefully handle unexpected situations and/or system maintenance periods while minimizing system downtime.
 
 To learn more, please refer to the related [documentation](/fast_data/runtime_management/overview.mdx).
+
+### Versioning management for Marketplace resources (fall release)
+
+TO DO
 
 ### Streamline how you build your Sagas, now No-Code
 
