--- a/docs/data_catalog/data_catalog_agent_setup.mdx
+++ b/docs/data_catalog/data_catalog_agent_setup.mdx
@@ -28,7 +28,7 @@ This configuration step is __required__ to display data sources within [the Data
 Without configuring and running it, searching for data assets on Data Catalog __will yield only empty results__.
 :::
 
-Once all the data schemas have been imported by _Data Catalog Agent_, it's __required__ to run a separate process to generate all the assets from each data schemas.
+Once all the data schemas have been imported by _Data Catalog Agent_, it is __required__ to run a separate process to generate all the assets from each data schema.
 
 A data schema, in fact, consists of at least three different assets:
 
