--- a/docs/data_catalog/data_catalog_agent_setup.mdx
+++ b/docs/data_catalog/data_catalog_agent_setup.mdx
@@ -40,7 +40,7 @@ These assets are kept in a dedicated collection, named `data-catalog-records` an
 
 ### Fabric Sync
 
-To perform the synchronization between the collections of datasets and assets, the following cronjob has to be configured. In this [documentation page](/development_suite/api-console/api-design/jobs-cronjob.md)
+To perform the synchronization between the collection of datasets imported by Data Catalog Agent and the collection of assets useful for Data Catalog application, the following cronjob has to be configured. In this [documentation page](/development_suite/api-console/api-design/jobs-cronjob.md)
 it is described how it can be configured, while here are highlighted which specific configurations of the K8s manifest:
 
 - `<URL_TO_CONTAINER_REGISTRY>` &rarr; is the url to your Container Registry of reference;
