updating some titles

--- a/docs/release-notes/mia-platform-v13.mdx
+++ b/docs/release-notes/mia-platform-v13.mdx
@@ -34,7 +34,7 @@ The main benefits for the user can be summarized by the following:
 
 Let's go in deep with the new Features:
 
-### Manage extensions from Console UI (fall release)
+### Manage extensions from Console UI | <Highlight color="#1890FF">v13 - Fall Release</Highlight>
 
 We are keeping our ecosystem growing by continuously adding new capabilities to the Platforge Extensibility Kit. Extend your Console by embedding iFrames, adding External Links & composing your pages with Microfrontend Composer using a dedicated "Extensions" manager, accessible to Company Owners within the Platforge section at the Company level.
 
@@ -55,7 +55,7 @@ To learn more, please refer to the [documentation](/console/console-extensibilit
 
 ## Infrastructure Management
 
-### Support to all infrastructure Resources in Console (fall release)
+### Support to all infrastructure Resources in Console | <Highlight color="#1890FF">v13 - Fall Release</Highlight>
 
 TO DO
 
@@ -135,7 +135,7 @@ Many are the benefits of adopting the Fast Data control plane in your Fast Data 
 
 To learn more, please refer to the related [documentation](/fast_data/runtime_management/overview.mdx).
 
-### Versioning management for Marketplace resources (fall release)
+### Versioning management for Marketplace resources | <Highlight color="#1890FF">v13 - Fall Release</Highlight>
 
 TO DO
 
