--- a/docs/release-notes/v13.3.0.md
+++ b/docs/release-notes/v13.3.0.md
@@ -31,7 +31,13 @@ This version addressed the following bugs:
 
 ### Fast Data Services
 
-### Bug Fix
+#### Projection Storer
+
+The new version `1.3.2` of the Projection Storer service is available!
+
+##### Improvements
+
+* Introduced the support for connecting to the storage using TLS/SSL connection. For more information about how to configure it, visit the related SSL connection [documentation](/fast_data/configuration/projection_storer.md#ssl-connection)
 
 ## Data Catalog
 
