--- a/docs/release-notes/mia-platform-v13.mdx
+++ b/docs/release-notes/mia-platform-v13.mdx
@@ -34,11 +34,11 @@ The main benefits for the user can be summarized by the following:
 
 Let's go in deep with the new Features:
 
-### Manage extensions from Console UI | <Highlight color="#1890FF">v13 - Fall Release</Highlight>
+### Extend Mia-Platform Console using... the Console! | <Highlight color="#1890FF">v13 - Fall Release</Highlight>
 
-We are keeping our ecosystem growing by continuously adding new capabilities to the Platforge Extensibility Kit. Extend your Console by embedding iFrames, adding External Links & composing your pages with Microfrontend Composer using a dedicated "Extensions" manager, accessible to Company Owners within the Platforge section at the Company level.
+We have strengthened our Platforge Extensibility Kit by adding the possibility to add extensions from Console UI and enriching the type of supported extensions. You can now extend your Console by embedding iFrames, adding External Links & composing your pages with Microfrontend Composer within a dedicated "Extensions" section, accessible to Company Owners within the Platforge section at Company level.
 
-Start customizing your Console by adding your first iFrame extension: simply select the desired Area and Sidebar section from the options, then input the URL you want to display to your users!
+Customizing your Mia-Platform Console has never been so easy: simply select the type of extension, the desired Area and Sidebar section from the options, and choose what you want to show your users!
 
 ### Extend Frontend of Mia-Platform Console with iFrames
 
