add software catalog to v13 overview

--- a/docs/release-notes/mia-platform-v13.mdx
+++ b/docs/release-notes/mia-platform-v13.mdx
@@ -135,6 +135,18 @@ Many are the benefits of adopting the Fast Data control plane in your Fast Data 
 
 To learn more, please refer to the related [documentation](/fast_data/runtime_management/overview.mdx).
 
+### Software Catalog | <Highlight color="#1890FF">v13 - Fall Release</Highlight>
+
+We are excited to announce the launch of the first release of the **Software Catalog**, designed to help you track, manage, and document software across your ecosystem. 
+The Software Catalog provides a centralized and reliable way to access software ownership, metadata, lifecycle status, and versions, ensuring accountability throughout the company's software landscape.
+
+![software catalog overview](img/software-catalog-overview.png)
+
+With Mia-Platform Software Catalog, you can:
+- Explore available software resources in a centralized location
+- View detailed item information, including metadata, lifecycle status, versions, release notes, and availability (Global, Public, or Private)
+- Seamlessly navigate between different versions of each item
+
 ### Versioning management for Marketplace resources | <Highlight color="#1890FF">v13 - Fall Release</Highlight>
 
 TO DO
