docs(data-catalog): add sync to data-catalog (#1733)
* add sync to data-catalog

* fix titles

* Update docs/data_catalog/data_catalog_agent_setup.mdx

Co-authored-by: Alberto Tessarotto <78902914+albertotessarotto@users.noreply.github.com>

* Update docs/data_catalog/data_catalog_agent_setup.mdx

Co-authored-by: Alberto Tessarotto <78902914+albertotessarotto@users.noreply.github.com>

* docs(data-fabric): update database preparation documentation

* fix(redirects): add redirects to avoid broken links on cast functions

---------

Co-authored-by: Alberto Tessarotto <78902914+albertotessarotto@users.noreply.github.com>
Co-authored-by: Daniele Bissoli <daniele.bissoli@mia-platform.eu>

--- a/docs/data_catalog/data_catalog_open_lineage.mdx
+++ b/docs/data_catalog/data_catalog_open_lineage.mdx
@@ -214,3 +214,12 @@ Here are described which routes Open Lineage service serves:
 | `/metadata-registry/items/:name`                           | REST | PATCH  | Change the definition of a custom property (e.g. type or description) |                               
 | `/metadata-registry/items/:name`                           | REST | DELETE | Remove a custom property definition                                   |
 | `/metadata-registry/search`                                | REST | GET    | Search for a specific metadata registry of interest                   |
+
+
+## Migration Guides
+
+Here are the migration steps to perform between each version of the service.
+
+### From 0.1.0 to 0.1.1
+
+Configure and execute the [Fabric Sync cronjob](/data_catalog/data_catalog_agent_setup.mdx#sync-assets) before releasing the service.
