--- a/docs/release-notes/v13.3.0.md
+++ b/docs/release-notes/v13.3.0.md
@@ -17,6 +17,26 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 ## Console
 
+### Support to all infrastructure Resources in Design
+TO DO
+
+### Support of Kubernetes Resources in the Runtime area | <Highlight color="#1890FF">v13 - Fall Release</Highlight>
+
+With the v13.3.0 it is now possible to monitor directly in the Runtime area all the Custom Resources deployed for your project, on each environment on it.
+
+For each resource you will be able to access its detail where you will see the respective Describe and Events that are generated, similarly to the other resources in the Runtime Area.
+
+To discover more, please refer to the [documentation](/console/design-your-projects/custom-resources/custom-resources.md).
+
+### View Marketplace resource Updates in your configuration
+TO DO
+
+### Add External Links in Console with the Extensibility manager
+TO DO
+
+### Compose Console pages using Microfrontend Composer (BETA)
+TO DO
+
 ### Bug Fix
 
 This version addressed the following bugs:
