added images on overview

--- a/docs/release-notes/mia-platform-v13.mdx
+++ b/docs/release-notes/mia-platform-v13.mdx
@@ -40,6 +40,8 @@ We have strengthened our Platforge Extensibility Kit by adding the possibility t
 
 Customizing your Mia-Platform Console has never been so easy: simply select the type of extension, the desired Area and where to display it from the available options, then choose what you want to show your users!
 
+![Extension Manager](img/extension-manager.png)
+
 ### Extend Frontend of Mia-Platform Console with iFrames
 
 Extend the Console as you like.
@@ -153,6 +155,8 @@ With Mia-Platform Software Catalog, you can:
 
 Version control for your Marketplace resources is now available in Mia-Platform Console. Users can manage and access different versions of Plugins and infrastructure Resources, selecting the one that best suits their needs and easily switching between versions. 
 If you want to discover more, head to the [dedicated section](/marketplace/add_to_marketplace/create_your_company_marketplace.md#set-controlled-versions-for-your-marketplace-resources-and-make-them-available-to-users) inside the [Company Marketplace](/marketplace/add_to_marketplace/create_your_company_marketplace.md) documentation page.
+
+![Versioned Service](img/versioned-service.png)
 
 ### Streamline how you build your Sagas, now No-Code
 
