--- a/docs/release-notes/mia-platform-v13.mdx
+++ b/docs/release-notes/mia-platform-v13.mdx
@@ -151,7 +151,7 @@ With Mia-Platform Software Catalog, you can:
 - View detailed item information, including metadata, lifecycle status, versions, release notes, and availability (Global, Public, or Private)
 - Seamlessly navigate between different versions of each item
 
-### Versioning management for Marketplace resources | <Highlight color="#1890FF">v13 - Fall Release</Highlight>
+### Versioning management of Marketplace resources | <Highlight color="#1890FF">v13 - Fall Release</Highlight>
 
 Version control for your Marketplace resources is now available in Mia-Platform Console. Users can manage and access different versions of Plugins and infrastructure Resources, selecting the one that best suits their needs and easily switching between versions. 
 If you want to discover more, head to the [dedicated section](/marketplace/add_to_marketplace/create_your_company_marketplace.md#set-controlled-versions-for-your-marketplace-resources-and-make-them-available-to-users) inside the [Company Marketplace](/marketplace/add_to_marketplace/create_your_company_marketplace.md) documentation page.
