--- a/docs/release-notes/mia-platform-v13.mdx
+++ b/docs/release-notes/mia-platform-v13.mdx
@@ -75,7 +75,7 @@ For each resource you will be able to access its detail where you will see the r
 
 To discover more, you can refer to the [documentation](/console/design-your-projects/custom-resources/custom-resources.md).
 
-![Custom Resources](img/custom-resources.png)
+![Custom Resources](img/infrastructure-resources.png)
 
 ### React to Console actions using Webhooks
 
