--- a/docs/release-notes/v13.3.0.md
+++ b/docs/release-notes/v13.3.0.md
@@ -18,9 +18,13 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 ## Console
 
 ### Support to all infrastructure Resources in Design
-TO DO
 
-### Support of Kubernetes Resources in the Runtime area | <Highlight color="#1890FF">v13 - Fall Release</Highlight>
+With this release, we are excited to introduce the ability to manage infrastructure provisioning by configuring your Infrastructure Resources at the Design level.
+A new "Infrastructure" section has been added within the Design of your Console, fully dedicated to Infrastructure as Code!
+
+For more information, please visit the [documentation page](/console/design-your-projects/custom-resources.md) and explore some helpful [use cases](/console/design-your-projects/custom-resources/custom-resources-use-cases.md).
+
+### Support to Kubernetes Resources in the Runtime area 
 
 With the v13.3.0 it is now possible to monitor directly in the Runtime area all the Custom Resources deployed for your project, on each environment on it.
 
