--- a/docs/release-notes/v13.3.0.md
+++ b/docs/release-notes/v13.3.0.md
@@ -32,14 +32,21 @@ For each resource you will be able to access its detail where you will see the r
 
 To discover more, please refer to the [documentation](/console/design-your-projects/custom-resources/custom-resources.md).
 
-### View Marketplace resource Updates in your configuration
-TO DO
+### View version updates of Marketplace resources in your configuration
+
+From this release, you will be able to see, within your configuration, your Marketplace resources that have a new version update available.  
+This will allow you to be notified and keep your resources updated easily and frictionlessly!
 
 ### Add External Links in Console with the Extensibility manager
-TO DO
 
-### Compose Console pages using Microfrontend Composer (BETA)
-TO DO
+We have enhanced our Platforge extensibility kit by adding external links among the supported extensions. You can now add this type of link in the sidebar from the Extension Manager in Console.
+
+### Extend Mia-Platform Console pages using Microfrontend Composer (BETA)
+
+With a view to further enhancing our Platforge toolkit dedicated to Console extensibility, we also introduced the possibility of composing Console pages using the Microfrontend Composer. 
+To do this, all you have to do is go to the Extensions manager at Company level, add an extension by selecting the ‘Create with Composer’ option and start customising the new section you want to add!
+
+Please note that this feature has now been released in Beta.
 
 ### Bug Fix
 
